phi/config/iptables.save
# Generated by iptables-save v1.4.21 on Tue Jan 29 19:48:08 2019
*security
:INPUT ACCEPT [949623:266636528]
:FORWARD ACCEPT [423096:283068845]
:OUTPUT ACCEPT [898696:336755239]
:FORWARD_direct - [0:0]
:INPUT_direct - [0:0]
:OUTPUT_direct - [0:0]
-A INPUT -j INPUT_direct
-A FORWARD -j FORWARD_direct
-A OUTPUT -j OUTPUT_direct
COMMIT
# Completed on Tue Jan 29 19:48:08 2019
# Generated by iptables-save v1.4.21 on Tue Jan 29 19:48:08 2019
*raw
:PREROUTING ACCEPT [1375546:550049667]
:OUTPUT ACCEPT [898696:336755239]
:OUTPUT_direct - [0:0]
:PREROUTING_ZONES - [0:0]
:PREROUTING_ZONES_SOURCE - [0:0]
:PREROUTING_direct - [0:0]
:PRE_public - [0:0]
:PRE_public_allow - [0:0]
:PRE_public_deny - [0:0]
:PRE_public_log - [0:0]
-A PREROUTING -j PREROUTING_direct
-A PREROUTING -j PREROUTING_ZONES_SOURCE
-A PREROUTING -j PREROUTING_ZONES
-A OUTPUT -j OUTPUT_direct
-A PREROUTING_ZONES -g PRE_public
-A PRE_public -j PRE_public_log
-A PRE_public -j PRE_public_deny
-A PRE_public -j PRE_public_allow
COMMIT
# Completed on Tue Jan 29 19:48:08 2019
# Generated by iptables-save v1.4.21 on Tue Jan 29 19:48:08 2019
*filter
:INPUT ACCEPT [672:218439]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [671:268172]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
:KUBE-EXTERNAL-SERVICES - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-SERVICES - [0:0]
-A INPUT -i em1 -p udp -m udp --dport 10250 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -i em1 -p tcp -m tcp --dport 10250 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -i em1 -p udp -m udp --dport 10248 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -i em1 -p tcp -m tcp --dport 10248 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -i em1 -p udp -m udp --dport 53 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -i em1 -p tcp -m tcp --dport 53 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A INPUT -i em1 -p udp -m udp --dport 8080 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -i em1 -p tcp -m tcp --dport 8080 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -i em1 -p udp -m udp --dport 6443 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -i em1 -p tcp -m tcp --dport 6443 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -j KUBE-FIREWALL
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -o docker_gwbridge -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker_gwbridge -j DOCKER
-A FORWARD -i docker_gwbridge ! -o docker_gwbridge -j ACCEPT
-A FORWARD -m comment --comment "kubernetes forwarding rules" -j KUBE-FORWARD
-A FORWARD -s 10.244.0.0/16 -j ACCEPT
-A FORWARD -d 10.244.0.0/16 -j ACCEPT
-A FORWARD -i docker_gwbridge -o docker_gwbridge -j DROP
-A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -j KUBE-FIREWALL
-A DOCKER -d 172.17.0.2/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.17.0.5/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 8080 -j ACCEPT
-A DOCKER -d 172.17.0.6/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 14390 -j ACCEPT
-A DOCKER -d 172.17.0.7/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 4200 -j ACCEPT
-A DOCKER -d 172.17.0.7/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 17483 -j ACCEPT
-A DOCKER -d 172.17.0.8/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 17321 -j ACCEPT
-A DOCKER -d 172.18.0.3/32 ! -i docker_gwbridge -o docker_gwbridge -p tcp -m tcp --dport 3888 -j ACCEPT
-A DOCKER -d 172.18.0.3/32 ! -i docker_gwbridge -o docker_gwbridge -p tcp -m tcp --dport 2888 -j ACCEPT
-A DOCKER -d 172.18.0.3/32 ! -i docker_gwbridge -o docker_gwbridge -p tcp -m tcp --dport 2181 -j ACCEPT
-A DOCKER -d 172.18.0.4/32 ! -i docker_gwbridge -o docker_gwbridge -p udp -m udp --dport 8125 -j ACCEPT
-A DOCKER -d 172.18.0.4/32 ! -i docker_gwbridge -o docker_gwbridge -p tcp -m tcp --dport 8094 -j ACCEPT
-A DOCKER -d 172.18.0.4/32 ! -i docker_gwbridge -o docker_gwbridge -p udp -m udp --dport 8092 -j ACCEPT
-A DOCKER -d 172.18.0.5/32 ! -i docker_gwbridge -o docker_gwbridge -p tcp -m tcp --dport 8086 -j ACCEPT
-A DOCKER -d 172.18.0.6/32 ! -i docker_gwbridge -o docker_gwbridge -p tcp -m tcp --dport 3000 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i docker_gwbridge ! -o docker_gwbridge -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o docker_gwbridge -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
-A KUBE-FIREWALL -m comment --comment "kubernetes firewall for dropping marked packets" -m mark --mark 0x8000/0x8000 -j DROP
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -m mark --mark 0x4000/0x4000 -j ACCEPT
-A KUBE-FORWARD -s 10.244.0.0/16 -m comment --comment "kubernetes forwarding conntrack pod source rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A KUBE-FORWARD -d 10.244.0.0/16 -m comment --comment "kubernetes forwarding conntrack pod destination rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Tue Jan 29 19:48:08 2019
# Generated by iptables-save v1.4.21 on Tue Jan 29 19:48:08 2019
*nat
:PREROUTING ACCEPT [1:60]
:INPUT ACCEPT [1:60]
:OUTPUT ACCEPT [3:180]
:POSTROUTING ACCEPT [3:180]
:DOCKER - [0:0]
:KUBE-MARK-DROP - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-SEP-CZWIWQ4ZNG7TWID6 - [0:0]
:KUBE-SEP-GIN6KDIMOPST6HWJ - [0:0]
:KUBE-SEP-HVC3D4BPEALQXZQ2 - [0:0]
:KUBE-SEP-LCQV5PZVO4SIIPYD - [0:0]
:KUBE-SEP-S3XPRYLPLZFYH42M - [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-ERIFXISQEP7F7OF4 - [0:0]
:KUBE-SVC-NPX46M4PTMTKRN6Y - [0:0]
:KUBE-SVC-TCOU7JCQXEZGVUNU - [0:0]
:OUTPUT_direct - [0:0]
:POSTROUTING_ZONES - [0:0]
:POSTROUTING_ZONES_SOURCE - [0:0]
:POSTROUTING_direct - [0:0]
:POST_public - [0:0]
:POST_public_allow - [0:0]
:POST_public_deny - [0:0]
:POST_public_log - [0:0]
:PREROUTING_ZONES - [0:0]
:PREROUTING_ZONES_SOURCE - [0:0]
:PREROUTING_direct - [0:0]
:PRE_public - [0:0]
:PRE_public_allow - [0:0]
:PRE_public_deny - [0:0]
:PRE_public_log - [0:0]
-A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o docker_gwbridge -j MASQUERADE
-A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
-A POSTROUTING -s 10.244.0.0/16 -d 10.244.0.0/16 -j RETURN
-A POSTROUTING -s 10.244.0.0/16 ! -d 224.0.0.0/4 -j MASQUERADE
-A POSTROUTING ! -s 10.244.0.0/16 -d 10.244.0.0/24 -j RETURN
-A POSTROUTING ! -s 10.244.0.0/16 -d 10.244.0.0/16 -j MASQUERADE
-A POSTROUTING -s 172.17.0.2/32 -d 172.17.0.2/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A POSTROUTING -s 172.17.0.5/32 -d 172.17.0.5/32 -p tcp -m tcp --dport 8080 -j MASQUERADE
-A POSTROUTING -s 172.17.0.6/32 -d 172.17.0.6/32 -p tcp -m tcp --dport 14390 -j MASQUERADE
-A POSTROUTING -s 172.17.0.7/32 -d 172.17.0.7/32 -p tcp -m tcp --dport 4200 -j MASQUERADE
-A POSTROUTING -s 172.17.0.7/32 -d 172.17.0.7/32 -p tcp -m tcp --dport 17483 -j MASQUERADE
-A POSTROUTING -s 172.17.0.8/32 -d 172.17.0.8/32 -p tcp -m tcp --dport 17321 -j MASQUERADE
-A POSTROUTING -s 172.18.0.3/32 -d 172.18.0.3/32 -p tcp -m tcp --dport 3888 -j MASQUERADE
-A POSTROUTING -s 172.18.0.3/32 -d 172.18.0.3/32 -p tcp -m tcp --dport 2888 -j MASQUERADE
-A POSTROUTING -s 172.18.0.3/32 -d 172.18.0.3/32 -p tcp -m tcp --dport 2181 -j MASQUERADE
-A POSTROUTING -s 172.18.0.4/32 -d 172.18.0.4/32 -p udp -m udp --dport 8125 -j MASQUERADE
-A POSTROUTING -s 172.18.0.4/32 -d 172.18.0.4/32 -p tcp -m tcp --dport 8094 -j MASQUERADE
-A POSTROUTING -s 172.18.0.4/32 -d 172.18.0.4/32 -p udp -m udp --dport 8092 -j MASQUERADE
-A POSTROUTING -s 172.18.0.5/32 -d 172.18.0.5/32 -p tcp -m tcp --dport 8086 -j MASQUERADE
-A POSTROUTING -s 172.18.0.6/32 -d 172.18.0.6/32 -p tcp -m tcp --dport 3000 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
-A DOCKER -i docker_gwbridge -j RETURN
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 12231 -j DNAT --to-destination 172.17.0.2:8080
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 17890 -j DNAT --to-destination 172.17.0.5:8080
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 14390 -j DNAT --to-destination 172.17.0.6:14390
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 40000 -j DNAT --to-destination 172.17.0.7:4200
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 17483 -j DNAT --to-destination 172.17.0.7:17483
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 17321 -j DNAT --to-destination 172.17.0.8:17321
-A DOCKER ! -i docker_gwbridge -p tcp -m tcp --dport 3878 -j DNAT --to-destination 172.18.0.3:3888
-A DOCKER ! -i docker_gwbridge -p tcp -m tcp --dport 2878 -j DNAT --to-destination 172.18.0.3:2888
-A DOCKER ! -i docker_gwbridge -p tcp -m tcp --dport 2171 -j DNAT --to-destination 172.18.0.3:2181
-A DOCKER ! -i docker_gwbridge -p udp -m udp --dport 13004 -j DNAT --to-destination 172.18.0.4:8125
-A DOCKER ! -i docker_gwbridge -p tcp -m tcp --dport 13003 -j DNAT --to-destination 172.18.0.4:8094
-A DOCKER ! -i docker_gwbridge -p udp -m udp --dport 13002 -j DNAT --to-destination 172.18.0.4:8092
-A DOCKER ! -i docker_gwbridge -p tcp -m tcp --dport 13001 -j DNAT --to-destination 172.18.0.5:8086
-A DOCKER ! -i docker_gwbridge -p tcp -m tcp --dport 13000 -j DNAT --to-destination 172.18.0.6:3000
-A KUBE-MARK-DROP -j MARK --set-xmark 0x8000/0x8000
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -m mark --mark 0x4000/0x4000 -j MASQUERADE
-A KUBE-SEP-CZWIWQ4ZNG7TWID6 -s 172.17.0.5/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-CZWIWQ4ZNG7TWID6 -p tcp -m tcp -j DNAT --to-destination 172.17.0.5:53
-A KUBE-SEP-GIN6KDIMOPST6HWJ -s 172.17.0.5/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-GIN6KDIMOPST6HWJ -p udp -m udp -j DNAT --to-destination 172.17.0.5:53
-A KUBE-SEP-HVC3D4BPEALQXZQ2 -s 172.17.0.9/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-HVC3D4BPEALQXZQ2 -p udp -m udp -j DNAT --to-destination 172.17.0.9:53
-A KUBE-SEP-LCQV5PZVO4SIIPYD -s 172.17.0.9/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-LCQV5PZVO4SIIPYD -p tcp -m tcp -j DNAT --to-destination 172.17.0.9:53
-A KUBE-SEP-S3XPRYLPLZFYH42M -s 10.1.10.30/32 -j KUBE-MARK-MASQ
-A KUBE-SEP-S3XPRYLPLZFYH42M -p tcp -m tcp -j DNAT --to-destination 10.1.10.30:6443
-A KUBE-SERVICES ! -s 10.244.0.0/16 -d 10.244.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.244.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-NPX46M4PTMTKRN6Y
-A KUBE-SERVICES ! -s 10.244.0.0/16 -d 10.244.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.244.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-SVC-TCOU7JCQXEZGVUNU
-A KUBE-SERVICES ! -s 10.244.0.0/16 -d 10.244.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-MARK-MASQ
-A KUBE-SERVICES -d 10.244.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-SVC-ERIFXISQEP7F7OF4
-A KUBE-SERVICES -m comment --comment "kubernetes service nodeports; NOTE: this must be the last rule in this chain" -m addrtype --dst-type LOCAL -j KUBE-NODEPORTS
-A KUBE-SVC-ERIFXISQEP7F7OF4 -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-CZWIWQ4ZNG7TWID6
-A KUBE-SVC-ERIFXISQEP7F7OF4 -j KUBE-SEP-LCQV5PZVO4SIIPYD
-A KUBE-SVC-NPX46M4PTMTKRN6Y -j KUBE-SEP-S3XPRYLPLZFYH42M
-A KUBE-SVC-TCOU7JCQXEZGVUNU -m statistic --mode random --probability 0.50000000000 -j KUBE-SEP-GIN6KDIMOPST6HWJ
-A KUBE-SVC-TCOU7JCQXEZGVUNU -j KUBE-SEP-HVC3D4BPEALQXZQ2
COMMIT
# Completed on Tue Jan 29 19:48:08 2019
# Generated by iptables-save v1.4.21 on Tue Jan 29 19:48:08 2019
*mangle
:PREROUTING ACCEPT [540072:216307956]
:INPUT ACCEPT [391170:103747018]
:FORWARD ACCEPT [149089:112584004]
:OUTPUT ACCEPT [354337:137352726]
:POSTROUTING ACCEPT [503426:249936730]
:FORWARD_direct - [0:0]
:INPUT_direct - [0:0]
:OUTPUT_direct - [0:0]
:POSTROUTING_direct - [0:0]
:PREROUTING_ZONES - [0:0]
:PREROUTING_ZONES_SOURCE - [0:0]
:PREROUTING_direct - [0:0]
:PRE_public - [0:0]
:PRE_public_allow - [0:0]
:PRE_public_deny - [0:0]
:PRE_public_log - [0:0]
COMMIT
# Completed on Tue Jan 29 19:48:08 2019
